src/syntax_analysis/expression/pratt_parsing/call_expression/tests/snapshots/monkey_interpreter__syntax_analysis__expression__pratt_parsing__call_expression__tests__test_syntax_analysis_for_call_expression_case2.snap
---
source: src/syntax_analysis/expression/pratt_parsing/call_expression/tests/mod.rs
expression: "crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code))"

---
AbstractSyntaxTree {
    abstract_syntax_tree: [
        Expression {
            expression: Call {
                function: Identifier {
                    identifier: "add",
                },
                arguments: [
                    Integer {
                        integer_token: Integer {
                            literal: "3",
                        },
                    },
                    Infix {
                        left_hand: Integer {
                            integer_token: Integer {
                                literal: "7",
                            },
                        },
                        operator_token: Multiply,
                        right_hand: Integer {
                            integer_token: Integer {
                                literal: "2",
                            },
                        },
                    },
                ],
            },
        },
    ],
    syntax_parsing_errors: [],
}
